<resources>
    <string name="app_name">Exercicio list</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="erro_cadastro">A senha deve conter no mínimo 6 caracteres</string>
    <string name="adicionar_treino">Adicionar Treino</string>
    <string name="editar_treino">Editar treino</string>
    <string name="excluir_treino">Excluir treino</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="criar_treino">Criar Treino</string>
    <string name="atualizar_treino">Atualizar Treino</string>
    <string name="nome_do_treino">Nome do treino</string>
    <string name="descricao">Descrição</string>
    <string name="criar">Criar</string>
    <string name="atualizar">Atualizar</string>
    <string name="adicionar_exercicio">Adicionar Exercicio</string>
    <string name="nome_do_exercicio">Nome do Exercicio</string>
    <string name="observa_es">Observações</string>
    <string name="criar_exercicio">Criar Exercicio</string>
    <string name="atualizar_exercicio">Atualizar Exercicio</string>
</resources>